Added admin class derived from xml file, implemented new system for pay periods

--- a/ems/EMSlib/EMSlib.vbproj
+++ b/ems/EMSlib/EMSlib.vbproj
@@ -62,6 +62,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.vb" />
     <Compile Include="Message.vb" />
     <Compile Include="Time.vb" />
     <Compile Include="User.vb" />
