implemented combobox to select pay slip pay period

--- a/ems/ems/ems.vbproj
+++ b/ems/ems/ems.vbproj
@@ -92,6 +92,7 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="globals.vb" />
     <Compile Include="Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
