--- a/ems/ems/ems.vbproj
+++ b/ems/ems/ems.vbproj
@@ -85,6 +85,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditEmployee.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
