--- a/ems/EMSlib/EMSlib.vbproj
+++ b/ems/EMSlib/EMSlib.vbproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -62,6 +63,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorHandler.vb" />
     <Compile Include="Message.vb" />
     <Compile Include="Time.vb" />
     <Compile Include="User.vb" />
